# JNI-Template

./: .gitignore  CMakeLists.txt  Readme.md  build.sh
src/: CMakeLists.txt  com_ttmo_HelloJNI.cc  com_ttmo_HelloJNI.h  com_ttmo_ObjectJNI.cc  com_ttmo_ObjectJNI.h  generate.sh
src/include/: jni.h
src/java/: run.sh
src/java/com/ttmo/: HelloJNI.java  JNITest.java  ObjectJNI.java
